tests/compile-fail/tracked_fn_return_ref.stderr
error: lifetime may not live long enough
  --> tests/compile-fail/tracked_fn_return_ref.rs:14:1
   |
14 | #[salsa::tracked]
   | ^^^^^^^^^^^^^^^^^ requires that `'db` must outlive `'static`
15 | fn tracked_fn_return_ref<'db>(db: &'db dyn Db, input: MyInput) -> &'db str {
   |                                                                   - lifetime `'db` defined here
   |
   = note: this error originates in the attribute macro `salsa::tracked` (in Nightly builds, run with -Z macro-backtrace for more info)

error: lifetime may not live long enough
  --> tests/compile-fail/tracked_fn_return_ref.rs:19:1
   |
19 | #[salsa::tracked]
   | ^^^^^^^^^^^^^^^^^ requires that `'db` must outlive `'static`
...
23 | ) -> ContainsRef<'db> {
   |      ----------- lifetime `'db` defined here
   |
   = note: this error originates in the attribute macro `salsa::tracked` (in Nightly builds, run with -Z macro-backtrace for more info)
